# micro-ROS_crazyflie_demo

./: .gitignore  NOTICE  README.md  docker-compose.yml
assets/diagrams/: architecture.puml
dockerfile/agent/: Dockerfile  agent.refs  entrypoint.sh  wait-for
dockerfile/builder/: Dockerfile
dockerfile/client/: Dockerfile  USAGE  USAGE.md  agent.refs  entrypoint.sh  headless.py  headless2.py  headlessbridge.py  micro-ROS-brigde.py  micro-ROS-sec-bridge.py  uros_cf_bridge.py  uros_cf_bridge_joystick.py  workingrpibridge.py
dockerfile/gcs/: Dockerfile  entrypoint.sh  gcs.perspective  gcs2.perspective
dockerfile/rviz/: Dockerfile  entrypoint.sh
dockerfile/rviz/src/remote/: package.xml  setup.cfg  setup.py
dockerfile/rviz/src/remote/attitude_to_vel/: attitude_to_vel.py
dockerfile/rviz/src/remote/config/: crazyflie.rviz  crazyflie_attitude.rviz
dockerfile/rviz/src/remote/launch/: launch_drone_attitude.launch.py  launch_drone_position.launch.py
dockerfile/rviz/src/remote/simple_navigation/: simple_navigation.py
dockerfile/rviz/src/robot_description/: CMakeLists.txt  (+1 more)
dockerfile/translator/: Dockerfile  entrypoint.sh
dockerfile/translator/src/: package.xml  setup.cfg  setup.py
dockerfile/visualizer/: Dockerfile  entrypoint.sh
dockerfile/visualizer/gui/: index.css  index.html  package.json  preload.js  renderer.js
dockerfile/visualizer/ros2subscriber/: app.js  package.json
visualizer/aux_devcontainer/: Dockerfile  devcontainer.json
visualizer/gui/: main.js  package-lock.json
visualizer/ros2subscriber/: package-lock.json  package.json  testros2.js
(+3 files in other folders)
